--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,9 @@
         </ul>
       </li>
       <li>
-        <a href="zapatillas/zapatillas.component.html.html">Accesorios</a>
+        <a [routerLink]="['/externo']" [ngStyle]="{
+          'color':'rgb(137, 81, 137)',
+           'font-size':'16px'}">Externo</a>
       </li>
       <li>
         <a href="zapatillas/zapatillas.component.html.html">Ofertas</a>
